numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@assert_eq_3.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/assert_eq_3.nbt
---
error: while type checking
  ┌─ <internal:3>:1:1
  │
1 │ assert_eq(1 second, 1 meter, 0.01 meter)
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │ │         │         │
  │ │         │         Length
  │ │         Time
  │ Incompatible types in 'assert_eq' call
